fixed images on mobile at photoblock & docs

--- a/styles/documentblock.css
+++ b/styles/documentblock.css
@@ -127,6 +127,7 @@
     color: #52515f !important;
   }
   .img-document {
+    object-fit: fill;
     height: 275px;
     margin-bottom: 20px;
   }
