--- a/styles/photoblock.css
+++ b/styles/photoblock.css
@@ -112,7 +112,8 @@
   }
 
   .promo-photo-block-inner {
-    width: 360px;
+    width: 100vw;
+    height: 327px;
     margin: 0 auto;
   }
   .promo-photo-block.dark-h2.text-font-photo,
@@ -139,7 +140,7 @@
 
   .photo-block {
     width: 100%;
-    height: 325px;
+    height: 390px;
     border-radius: 60px;
     margin-right: 0;
     margin-bottom: 20px;
@@ -149,6 +150,7 @@
   }
 
   .graduates {
+    object-fit: fill;
     width: 100%;
     height: 100%;
     margin-top: 10px;
